[tool.poetry]
name = "CovidInLA"
version = "1.0.0"
description = ""
authors = ["Turtle Inventions <inventionsturtle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
matplotlib = "^3.3.3"
tilemapbase = "^0.4.7"
imageio = "^2.9.0"
progress = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
